toolchain/internal/core/analysis/testdata/errors/structure/duplicate_field_in_proc.ufo
// @expect: E703

rpc Users {
	proc GetUser {
		input {
			id: string
			id: int
		}
		output { name: string }
	}
}
